--- a/package.json
+++ b/package.json
@@ -1,21 +1,25 @@
 {
-  "name": "quiz-arena-backend",
-  "version": "1.0.0",
-  "description": "backend repo of our project",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/quizarenastar/quiz-arena-backend.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
-  "bugs": {
-    "url": "https://github.com/quizarenastar/quiz-arena-backend/issues"
-  },
-  "homepage": "https://github.com/quizarenastar/quiz-arena-backend#readme"
+    "name": "quiz-arena-backend",
+    "version": "1.0.0",
+    "description": "backend repo of our project",
+    "main": "index.js",
+    "scripts": {
+        "start": "node index.js",
+        "dev": "nodemon index.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/quizarenastar/quiz-arena-backend.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "type": "commonjs",
+    "bugs": {
+        "url": "https://github.com/quizarenastar/quiz-arena-backend/issues"
+    },
+    "homepage": "https://github.com/quizarenastar/quiz-arena-backend#readme",
+    "dependencies": {
+        "express": "^5.1.0"
+    }
 }
