--- a/package.json
+++ b/package.json
@@ -20,6 +20,13 @@
     },
     "homepage": "https://github.com/quizarenastar/quiz-arena-backend#readme",
     "dependencies": {
-        "express": "^5.1.0"
+        "bcryptjs": "^3.0.2",
+        "dotenv": "^17.2.2",
+        "express": "^5.1.0",
+        "express-rate-limit": "^8.1.0",
+        "joi": "^18.0.1",
+        "jsonwebtoken": "^9.0.2",
+        "mongoose": "^8.18.1",
+        "winston": "^3.17.0"
     }
 }
