--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "joi": "^18.0.1",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.18.1",
+        "openai": "^6.2.0",
         "winston": "^3.17.0"
     }
 }
